# hexaFn

./: .gitignore  .releaserc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO_LIST.md  USE_CASES.md  hexaFn.code-workspace  package.json  test.rs  tree.txt
.github/: .commitlintrc.yml  .labeler.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  auto_assign.yml  config.yml  copilot-instructions.md  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: design_proposal.yml  feature_request.yml  feedback.yml  qna.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  documentation.md  feature-request.md  feature_request.md  question.md  support.md  🌟-feature-request.md  🐛-bug-report.md
.github/workflows/: add-to-project.yml  auto-assign.yml  auto-milestone.yml  branch-name-check.yml  ci.yml  commitlint.yml  coverage.disabled.yml  coverage.yml  labeler.yml  labeler_pr.yml  main-pr-protect.yml  pr-title-check.yml  release-pr-protect.yml  release.yml  reuse-lint.yml  stale.yml
LICENSES/: MIT.txt
crates/hexafn-bridge/: Cargo.toml
crates/hexafn-bridge/src/domain/contracts/: integration.rs  mod.rs
crates/hexafn-cast/: Cargo.toml
crates/hexafn-cast/src/: lib.rs
crates/hexafn-cast/src/domain/contracts/: mod.rs  topic.rs
crates/hexafn-core/: Cargo.toml
crates/hexafn-core/src/: lib.rs
crates/hexafn-core/src/domain/: mod.rs
crates/hexafn-core/src/domain/contracts/: domain_event.rs  error.rs  event.rs  mod.rs  pipeline.rs
crates/hexafn-core/src/errors/: mod.rs  pipeline_error.rs
crates/hexafn-core/src/phases/: context.rs  lifecycle.rs  mod.rs  result.rs
crates/hexafn-core/src/types/: identifiers.rs  mod.rs
crates/hexafn-run/: Cargo.toml
crates/hexafn-run/src/application/: mod.rs
crates/hexafn-store/: Cargo.toml
crates/hexafn-store/src/domain/contracts/: kv_store.rs  mod.rs
crates/hexafn-trigger/: Cargo.toml
crates/hexafn-trigger/src/: lib.rs
crates/hexafn-trigger/src/domain/contracts/: mod.rs  trigger.rs  trigger_condition.rs  trigger_evaluator.rs
crates/hexafn-trigger/src/domain/value_objects/: mod.rs  trigger_condition.rs  trigger_config.rs  trigger_id.rs  trigger_name.rs  trigger_state.rs
crates/hexafn-watch/: Cargo.toml
crates/hexafn-watch/src/domain/contracts/: mod.rs  trace.rs
docs/: ARCHITECTURE.md  BRANCH_STRATEGY.md  BRANDING.md  CNAME  CODE_OF_CONDUCT.md  COMMIT_STRATEGY.md  COMMUNITY.md  CONFIGURATION.md  CONTACT.md  CONTRIBUTING.md  DATA_FLOW.md  DATA_FLOW_DETAIL.md  DATA_FLOW_DETAIL_EXAMPLE.md  DATA_FLOW_EXAMPLE.md  DATA_MODEL_BRIDGE.md  DATA_MODEL_CAST.md  DATA_MODEL_CORE.md  DATA_MODEL_RUN.md  DATA_MODEL_STORE.md  DATA_MODEL_TRIGGER.md  DATA_MODEL_WATCH.md  DEVELOPMENT_GUIDE.md  FAQ.md  GETTING_STARTED.md  HEXAGONAL_ARCHITECTURE_GUIDE.md  LABELLING_STRATEGY.md  MILESTONES.md  PROJECT_BOARD.md  PROJECT_STRUCTURE.md  PR_STRATEGY.md  ROADMAP.md  RUST_PORTS_ADAPTERS_EXAMPLE.md  SECURITY.md  STYLE_GUIDE.md  SUMMARY.md  SUPPORT.md  TODO_LIST.md  USE_CASES.md  architecture.md  branch-strategy.md  (+4 more)
examples/: README.md
modules/trigger/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
tests/: README.md
