# SPDX-FileCopyrightText: 2025 Husamettin ARABACI
# SPDX-License-Identifier: MIT

[package]
name = "hexaFn"
version = "0.1.0"
authors = ["Husamettin ARABACI <info@hexafn.com>"]
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/hTuneSys/hexaFn"
description = "Modular event-driven function pipeline in Rust."
homepage = "https://hexafn.com"
keywords = ["rust", "pipeline", "event-driven", "modular"]
categories = ["asynchronous", "network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[workspace]
members = [
    "shared",
    "modules/bridge",
    "modules/cast",
    "modules/run",
    "modules/store",
    "modules/trigger",
    "modules/watch",
]
