# SPDX-FileCopyrightText: 2025 Husamettin ARABACI
# SPDX-License-Identifier: MIT

[package]
name = "hexafn-run"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Function execution domain - handles logic execution (Function stage)"

[dependencies]
hexafn-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"