# SPDX-FileCopyrightText: 2025 Husamettin ARABACI
# SPDX-License-Identifier: MIT

[package]
name = "hexafn-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage domain - handles data persistence and state management (Forward stage)"

[dependencies]
hexafn-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"