# SPDX-FileCopyrightText: 2025 Husamettin ARABACI
# SPDX-License-Identifier: MIT

[package]
name = "hexafn-trigger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HexaTrigger - Conditional logic and rule engine for Feed/Filter phases of 6F Lifecycle Flow"

[dependencies]
hexafn-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"